[tool]
[tool.poetry]
name = "rdaneelolivaw"
version = "0.0.0"
description = "bot to manage tasks in the Telegram group of MakersGC"
authors = ["Iván Hernández Cazorla <ivan@ivanhercaz.com>"]

[tool.poetry.dependencies]
python = "*"
pygithub = "==1.45"
python-dotenv = "==0.10.3"
telegram = "==0.0.1"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

versioning = "semver"
