[tool]
[tool.poetry]
name = "rdaneelolivaw"
version = "0.1.0"
description = "bot to manage tasks in the Telegram group of MakersGC"
authors = ["Iván Hernández Cazorla <ivan@ivanhercaz.com>"]

[tool.black]
line-length = 99
target-version = ['py37']
include = '\.pyi?$'

[tool.poetry.dependencies]
python = "*"
pygithub = "==1.45"
python-dotenv = "==0.10.3"
python-telegram-bot = ">=12.2.0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

versioning = "semver"
